--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "Escapade",
+  "name": "mins",
+  "title": "Mins",
+  "description": "",
   "version": "1.0.0",
-  "description": "Escapade is a travel-oriented child theme for the Primer theme.",
-  "main": "index.php",
+  "license": "GPL-2.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "godaddy/wp-escapade-theme",
-  "author": "GoDaddy",
-  "license": "GPL-2.0",
-  "bugs": {
-    "url": "https://github.com/godaddy/wp-escapade-theme/issues"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/godaddy/wp-mins-theme.git"
   },
-  "homepage": "https://wordpress.org/themes/escapade/",
+  "author": "GoDaddy",
+  "bugs": {
+    "url": "https://github.com/godaddy/wp-mins-theme/issues"
+  },
+  "homepage": "https://github.com/godaddy/wp-mins-theme/issues",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.5",
     "grunt-autoprefixer": "~3.0.4",
     "grunt-browser-sync": "~2.2.0",
     "grunt-cssjanus": "~0.3.2",
-    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "~1.0.1",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-pot": "~0.2.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-pot": "~0.1.2",
     "grunt-po2mo": "~0.1.2",
-    "grunt-sass": "1.2.0",
+    "grunt-sass": "^1.2.0",
     "grunt-text-replace": "~0.4.0",
-    "matchdep": "~1.0.1",
-    "grunt-dev-update": "~2.0.0",
-    "load-grunt-tasks": "~3.5.0"
+    "load-grunt-tasks": "~3.5.0",
+    "matchdep": "~1.0.1"
   }
 }
