--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mins",
   "title": "Mins",
-  "description": "",
+  "description": "Mins is a Primer child theme with a minimal design.",
   "version": "1.0.0",
   "license": "GPL-2.0",
   "scripts": {
