--- a/package.json
+++ b/package.json
@@ -14,21 +14,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.5",
     "grunt-autoprefixer": "~3.0.4",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-cssmin": "~0.14.0",
-    "grunt-contrib-jshint": "~1.0.0",
-    "grunt-contrib-uglify": "~1.0.1",
-    "grunt-contrib-watch": "~1.0.0",
     "grunt-cssjanus": "~0.3.2",
+    "grunt-contrib-watch": "~1.0.0",
     "grunt-dev-update": "~2.0.0",
-    "grunt-po2mo": "~0.1.2",
-    "grunt-pot": "~0.2.1",
-    "grunt-sass": "1.2.0",
-    "grunt-text-replace": "~0.4.0",
+    "grunt-sass": "^1.2.0",
     "load-grunt-tasks": "~3.5.0",
-    "matchdep": "~1.0.1",
-    "susy": "~2.2.12"
+    "matchdep": "~1.0.1"
   }
 }
