Change Theme URI

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "GoDaddy",
   "license": "GPL-2.0",
   "repository": "godaddy/wp-mins-theme",
-  "homepage": "https://wordpress.org/themes/mins/",
+  "homepage": "https://github.com/godaddy/wp-mins-theme",
   "bugs": {
     "url": "https://github.com/godaddy/wp-mins-theme/issues"
   },
