--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.1.4",
   "author": "GoDaddy",
   "license": "GPL-2.0",
-  "repository": "godaddy/wp-mins-theme",
+  "repository": "godaddy-wordpress/primer-child-mins",
   "homepage": "https://github.com/godaddy-wordpress/primer-child-mins/",
   "bugs": {
     "url": "https://github.com/godaddy-wordpress/primer-child-mins/issues"
