--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "version": "1.1.4",
   "author": "GoDaddy",
   "license": "GPL-2.0",
-  "repository": "godaddy/wp-mins-theme",
-  "homepage": "https://github.com/godaddy/wp-mins-theme",
+  "repository": "godaddy-wordpress/primer-child-mins",
+  "homepage": "https://github.com/godaddy-wordpress/primer-child-mins/",
   "bugs": {
-    "url": "https://github.com/godaddy/wp-mins-theme/issues"
+    "url": "https://github.com/godaddy-wordpress/primer-child-mins/issues"
   },
   "engines": {
     "php": ">= 5.2",
     "wordpress": ">= 4.4"
   },
   "badges": [
-    "[![Build Status](https://travis-ci.org/<%= pkg.repository %>.svg?branch=master)](https://travis-ci.org/<%= pkg.repository %>)",
+    "[![CircleCI](https://circleci.com/gh/godaddy-wordpress/primer-child-mins.svg?style=svg)](https://circleci.com/gh/godaddy-wordpress/primer-child-mins)",
     "[![License](https://img.shields.io/badge/license-GPL--2.0-brightgreen.svg)](https://github.com/<%= pkg.repository %>/blob/master/license.txt)",
     "[![PHP <%= pkg.engines.php %>](https://img.shields.io/badge/php-<% print(encodeURI(pkg.engines.php)) %>-8892bf.svg)](https://secure.php.net/supported-versions.php)",
     "[![WordPress <%= pkg.engines.wordpress %>](https://img.shields.io/badge/wordpress-<% print(encodeURI(pkg.engines.wordpress)) %>-blue.svg)](https://wordpress.org/download/release-archive/)"
