--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
   "devDependencies": {
     "grunt": "^1.1.0",
     "grunt-autoprefixer": "^3.0.4",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^4.0.0",
-    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-jshint": "^3.1.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-cssjanus": "^0.4.0",
-    "grunt-sass": "^2.0.0",
+    "grunt-cssjanus": "^0.5.0",
+    "grunt-sass": "^3.1.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-wp-readme-to-markdown": "^2.0.1",
-    "load-grunt-tasks": "^4.0.0",
+    "load-grunt-tasks": "^5.1.0",
     "matchdep": "^2.0.0"
   },
   "scripts": {
     "version": "grunt version && git add -A .",
     "postversion": "git push && git push --tags"
+  },
+  "dependencies": {
+    "grunt-dev-update": "^2.3.0"
   }
 }
