--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "[![WordPress <%= pkg.engines.wordpress %>](https://img.shields.io/badge/wordpress-<% print(encodeURI(pkg.engines.wordpress)) %>-blue.svg)](https://wordpress.org/download/release-archive/)"
   ],
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "grunt": "^1.1.0",
-    "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-jshint": "^3.1.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-cssjanus": "^0.5.0",
+    "grunt-postcss": "^0.9.0",
     "grunt-sass": "^3.1.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-wp-readme-to-markdown": "^2.0.1",
