--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mins",
   "title": "Mins",
-  "description": "Mins is a modern WordPress theme based on _s.",
+  "description": "Mins is a Primer child theme with a minimal design.",
   "version": "1.1.4",
   "author": "GoDaddy",
   "license": "GPL-2.0",
@@ -14,6 +14,9 @@
     "php": ">= 5.2",
     "wordpress": ">= 4.4"
   },
+  "browserslist": [
+    "last 2 versions"
+  ],
   "badges": [
     "[![CircleCI](https://circleci.com/gh/godaddy-wordpress/primer-child-mins.svg?style=svg)](https://circleci.com/gh/godaddy-wordpress/primer-child-mins)",
     "[![License](https://img.shields.io/badge/license-GPL--2.0-brightgreen.svg)](https://github.com/<%= pkg.repository %>/blob/master/license.txt)",
@@ -21,19 +24,21 @@
     "[![WordPress <%= pkg.engines.wordpress %>](https://img.shields.io/badge/wordpress-<% print(encodeURI(pkg.engines.wordpress)) %>-blue.svg)](https://wordpress.org/download/release-archive/)"
   ],
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "grunt": "^1.1.0",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^4.0.0",
-    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-jshint": "^3.1.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-cssjanus": "^0.4.0",
-    "grunt-sass": "^2.0.0",
+    "grunt-cssjanus": "^0.5.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^3.1.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-wp-readme-to-markdown": "^2.0.1",
-    "load-grunt-tasks": "^4.0.0",
-    "matchdep": "^2.0.0"
+    "load-grunt-tasks": "^5.1.0",
+    "matchdep": "^2.0.0",
+    "node-sass": "^7.0.1"
   },
   "scripts": {
     "version": "grunt version && git add -A .",
